--- a/css/corporation.css
+++ b/css/corporation.css
@@ -51,7 +51,7 @@
 
 
 /* 기업소개 리뉴얼 231120 김진솔*/
-.yc_corp #sub_banner .sub_visual .visual_img{background-image:url(../img_new/corporation/bg.jpg);}
+.yc_corp #sub_banner .sub_visual .visual_img{background-image:url(../images/bg.jpg);}
 
 .yc_about #content{padding-bottom: 0;}
 .yc_about .matchbox{padding-top: 100px;}
@@ -59,7 +59,7 @@
 .yc_about .matchbox .full_img img{width:100%;max-width:unset;height:100%;max-height:unset;object-fit:cover;object-position:center;}
 .yc_about .matchbox1{text-align: center;}
 .yc_about .matchbox1 .full_img{height: 420px;}
-.yc_about .matchbox1 .slogan_en{font-size: 52px;font-weight: 700;color: #008e43;margin-bottom: 12px;}
+.yc_about .matchbox1 .slogan_en{font-size: 52px;font-weight: 700;color: #003ec5;margin-bottom: 12px;}
 .yc_about .matchbox1 .slogan_kr{font-size: 38px;font-weight: 600;margin-bottom: 41px;}
 .yc_about .matchbox1 .slogan_text{margin-bottom: 40px;}
 .yc_about .matchbox1 .slogan_text p{font-size: 20px;line-height: 32px;word-break: keep-all;}
@@ -68,22 +68,22 @@
 .yc_about .matchbox2 .title_box{margin-bottom: 91px;}
 .yc_about .matchbox2 .subject{font-size: 32px;font-weight: 700;}
 .yc_about .matchbox2 .title{font-size: 50px;font-weight: 500;color: #a1a1a1;line-height: 64px;margin: 27px 0;}
-.yc_about .matchbox2 .title span{font-weight: 700;color: #008e43;}
+.yc_about .matchbox2 .title span{font-weight: 700;color: #003ec5;}
 .yc_about .matchbox2 .text{font-size: 20px;line-height: 30px;word-break: keep-all;}
 .yc_about .matchbox2 .text + .text{margin-top: 30px;}
-.yc_about .matchbox2 .full_img{margin-bottom: 117px;height: 400px;background: rgba(0, 0, 0, 0.4) url(/data/yuhancare/inc/img_new/corporation/about/tab2_img.jpg) no-repeat center / cover;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;background-attachment: fixed;background-blend-mode: multiply;}
+.yc_about .matchbox2 .full_img{margin-bottom: 117px;height: 400px;background: rgba(0, 0, 0, 0.4) url(../images/tab2_img.jpg) no-repeat center / cover;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;background-attachment: fixed;background-blend-mode: multiply;}
 .yc_about .matchbox2 .full_img .img_text{font-size: 38px;font-weight: 700;line-height: 52px;margin-top: 26px;}
 .yc_about .matchbox2 .circlebox{margin: 60px 0;font-size: 0;}
 .yc_about .matchbox2 .circlebox ul{display: inline-flex;justify-content: center;position:relative;}
 .yc_about .matchbox2 .circlebox ul:before{content: "";display: block;position: absolute;width: 90%;height: 4px;top: calc(50% - 2px);left: 10%;background-color: #a8a8a8;}
-.yc_about .matchbox2 .circlebox li{text-align: center;width: 240px;height: 240px;border: 4px solid #008e43;border-radius: 50%;background-color: white;position:relative;font-size: 24px;line-height: 30px;padding-top: 96px;}
+.yc_about .matchbox2 .circlebox li{text-align: center;width: 240px;height: 240px;border: 4px solid #dd2a2a;border-radius: 50%;background-color: white;position:relative;font-size: 24px;line-height: 30px;padding-top: 96px;}
 .yc_about .matchbox2 .circlebox li:nth-child(2n){border-color: #a8a8a8;}
 .yc_about .matchbox2 .circlebox li + li{margin-left: 10px;}
 .yc_about .matchbox2 .circlebox li span{font-weight: 600;display: block;}
 .yc_about .matchbox3{color: #3e3e3e;position:relative;padding-top: 130px;}
 .yc_about .matchbox3 .inner_wrap{padding: 0 28px;}
 .yc_about .matchbox3 .speech{font-size: 38px;font-weight: 700;line-height: 52px;margin-bottom: 63px;}
-.yc_about .matchbox3 .speech span{color: #008e43;}
+.yc_about .matchbox3 .speech span{color: #003ec5;}
 .yc_about .matchbox3 .speech .mobr{display: none;}
 .yc_about .matchbox3 .ceo_box{text-align: right; padding-right: 20px;margin-top:60px;}
 .yc_about .matchbox3 .ceo_box .imgbox{margin-bottom: 53px;}
