--- a/css/value.css
+++ b/css/value.css
@@ -2,22 +2,22 @@
 
 /*** 리뉴얼 ***/
 /* 브랜드 리뉴얼 240201 김진솔 */
-.yc_brand #sub_banner .sub_visual .visual_img{background-image:url(../img_new/value/bg.jpg);}
+.yc_brand #sub_banner .sub_visual .visual_img{background-image:url(../images/bg2.jpg);}
 .yc_brand .cont_body{width:1000px;margin:0 auto;}
 .yc_brand .btn_flex{display:flex;justify-content:space-between;flex-wrap:wrap;}
 .yc_brand .brand_box{width:240px;}
 .yc_brand .brand_box:nth-child(n+5){margin-top:60px;}
 .yc_brand .brand_box button{position:relative;width:100%;height:300px;border:1px solid #c9c9c9;border-radius:10px;box-sizing:border-box;}
 .yc_brand .brand_box button:after{display:block;visibility:hidden;position:absolute;top:-1px;left:-1px;width:calc(100% + 2px);height:calc(100% + 2px);border-radius:10px;background-repeat:no-repeat;background-position:center;background-size:cover;content:"";opacity:0;}
-.yc_brand .brand_box:nth-child(1) button:after{background-image:url(../img_new/value/brand/brand_img1.jpg);}
-.yc_brand .brand_box:nth-child(2) button:after{background-image:url(../img_new/value/brand/brand_img2.jpg);}
+/*.yc_brand .brand_box:nth-child(1) button:after{background-image:url(../images/product/higen_1.jpg);}
+.yc_brand .brand_box:nth-child(2) button:after{background-image:url(../images/product/higen_2.jpg);}
 .yc_brand .brand_box:nth-child(3) button:after{background-image:url(../img_new/value/brand/brand_img3.jpg);}
 .yc_brand .brand_box:nth-child(4) button:after{background-image:url(../img_new/value/brand/brand_img4.jpg);}
 .yc_brand .brand_box:nth-child(5) button:after{background-image:url(../img_new/value/brand/brand_img5.jpg);}
 .yc_brand .brand_box:nth-child(6) button:after{background-image:url(../img_new/value/brand/brand_img6.jpg);}
 .yc_brand .brand_box:nth-child(7) button:after{background-image:url(../img_new/value/brand/brand_img7.jpg);}
-.yc_brand .brand_box:nth-child(8) button:after{background-image:url(../img_new/value/brand/brand_img8.jpg);}
-.yc_brand .brand_box button:hover img{display:none;}
+.yc_brand .brand_box:nth-child(8) button:after{background-image:url(../img_new/value/brand/brand_img8.jpg);}*/
+.yc_brand .brand_box button:hover img{display:block;}
 .yc_brand .brand_box button:hover:after{visibility:visible;transition:200ms ease-in-out;opacity:1;}
 .yc_brand .brand_box .brand_nm{margin-top:30px;font-size:26px;font-weight:600;}
 
@@ -40,7 +40,7 @@
 .brand_layer_popup .thumb_box .tmb_left{font-size:22px;font-weight:700;}
 .brand_layer_popup .thumb_box .tmb_right{font-size:0;}
 .brand_layer_popup .thumb_box .tmb_right .mall_link{padding:0 15px;border-radius:15px;background-color:#181818;color:white;font-size:18px;font-weight:500;line-height:30px;}
-.brand_layer_popup .thumb_box .tmb_right .mall_link:after{display:inline-block;width:7px;height:30px;margin-left:8px;background:url(../img_new/common/arrow_right_white.svg) no-repeat center / contain;vertical-align:top;content:"";}
+.brand_layer_popup .thumb_box .tmb_right .mall_link:after{display:inline-block;width:24px;height:30px;margin-left:8px;background:url(../images/arrow-right-white.svg) no-repeat center / contain;vertical-align:top;content:"";}
 .brand_layer_popup .thumb_box .tmb_right .naver_mall{margin-left:10px;background-color:#02b60f;}
 .brand_layer_popup .thumb_box .scroll_box{padding-top:30px;padding-bottom:15px;border-top:1px solid #181818;font-size:0;}
 .brand_layer_popup .thumb_box .scroll_box .scroll_item{display:inline-block;width:220px;color:#181818;vertical-align: top;}
@@ -108,9 +108,9 @@
 	.brand_layer_popup .thumb_box .thumb_nm{font-size:16px;}
 }
 
-/* rnd 리뉴얼 240201 김진솔 */
+
 @keyframes gageCharge {to{width:0px;}}
-.yc_rnd #sub_banner .sub_visual .visual_img{background-image:url(../img_new/value/bg2.jpg);}
+.yc_rnd #sub_banner .sub_visual .visual_img{background-image:url(../images/bg.jpg);} /* about 이미지 인증서 이미지*/
 .yc_rnd .to_detail{width:300px;height:60px;margin-top:44px;color:white;font-size:20px;font-weight:600;}
 .yc_rnd .tab_match{width:1000px;margin:0 auto;}
 .yc_rnd .matchbox{padding-top:145px;}
@@ -249,7 +249,7 @@
 	.yc_rnd .matchbox2 .tablebox .table td:first-child:before{display:none;}
 	.yc_rnd .matchbox2 .tablebox .table td:nth-child(2){padding-top:10px;}
 	.yc_rnd .matchbox2 .tablebox .open_table{display:inline-block;width:100%;height:40px;font-size:30px;font-weight:600;text-align:left;}
-	.yc_rnd .matchbox2 .tablebox .open_table:after{display:block;position:absolute;top:15px;right:0;width:20px;height:10px;background:url(../../inc/img_new/common/arrow_bottom_black.svg) no-repeat center / contain;transition:transform 250ms ease-in-out;content:"";}
+	.yc_rnd .matchbox2 .tablebox .open_table:after{display:block;position:absolute;top:0;right:0;width:36px;height:36px;background:url(../images/arrow-drop-down-line.svg) no-repeat center / contain;transition:transform 250ms ease-in-out;content:"";}
 	.yc_rnd .matchbox2 .tablebox .open_table.on:after{transform:scaleY(-1);}
 	.yc_rnd .matchbox2 .tablebox .conbox{display:none;margin-top:10px;}
 	.yc_rnd .matchbox2 .tablebox.global td:nth-child(2) br{display:block;}
